<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ff282828"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baiya.flashlight.SettingActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:background="@drawable/bg_actionbar"
            android:layout_width="match_parent"
            android:layout_height="48.0dip">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/setting_back"
                android:background="@drawable/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/ic_forward_actionbar"
                    android:layout_width="16.0dip"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_marginRight="16.0dip"
                    android:src="@drawable/ic_logo"
                    android:layout_width="32.0dip"
                    android:layout_height="32.0dip" />
                </LinearLayout>
            <TextView
                android:textSize="18.0sp"
                android:textColor="#ffffffff"
                android:text="@string/setting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>
        <View
            android:background="#ff3d3d3d"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"/>
        </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="14.0sp"
                android:textStyle="bold"
                android:textColor="#ffbebebe"
                android:gravity="bottom"
                android:paddingBottom="2.0dip"
                android:layout_marginLeft="6.0dip"
                android:text="@string/setting_about"
                android:layout_width="wrap_content"
                android:layout_height="30.0dip" />
            <View
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:background="#ff494b4d"
                android:layout_width="match_parent"
                android:layout_height="2.0dip" />
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/setting_light_on_open_container"
                android:background="@drawable/back_btn"
                android:layout_width="match_parent"
                android:layout_height="48.0dip">
                <TextView
                    android:textSize="18.0sp"
                    android:textColor="@color/item_selector"
                    android:layout_marginLeft="6.0dip"
                    android:text="@string/setting_open_light"
                    android:layout_weight="1.0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/setting_light_box"
                    android:background="@drawable/setting_checkbox"
                    android:clickable="false"
                    android:layout_marginRight="8.0dip"
                    android:button="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
            <TextView
                android:textSize="14.0sp"
                android:textStyle="bold"
                android:textColor="#ffbebebe"
                android:gravity="bottom"
                android:paddingBottom="2.0dip"
                android:layout_width="wrap_content"
                android:layout_height="30.0dip"
                android:layout_marginLeft="6.0dip"
                android:text="@string/about_other" />
            <TextView
                android:background="#ff494b4d"
                android:layout_width="fill_parent"
                android:layout_height="2.0dip" />
            <TextView
                android:textSize="18.0sp"
                android:textColor="@color/item_selector"
                android:gravity="center_vertical"
                android:id="@+id/setting_rate"
                android:background="@drawable/back_btn"
                android:paddingLeft="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:text="@string/setting_rate" />
            <TextView
                android:background="#ff3d3f40"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
            <TextView
                android:textSize="18.0sp"
                android:textColor="@color/item_selector"
                android:gravity="center_vertical"
                android:id="@+id/setting_share"
                android:background="@drawable/back_btn"
                android:paddingLeft="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:text="@string/setting_share" />
            <TextView
                android:background="#ff3d3f40"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
            <TextView
                android:textSize="18.0sp"
                android:textColor="@color/item_selector"
                android:gravity="center_vertical"
                android:id="@+id/setting_feedback"
                android:background="@drawable/back_btn"
                android:paddingLeft="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:text="@string/setting_mail" />
            <TextView
                android:background="#ff3d3f40"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
            <TextView
                android:visibility="gone"
                android:textSize="18.0sp"
                android:textColor="@color/item_selector"
                android:gravity="center_vertical"
                android:id="@+id/setting_about_us"
                android:background="@drawable/back_btn"
                android:paddingLeft="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:text="@string/setting_about_us" />
            <TextView
                android:background="#ff3d3f40"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
            <TextView
                android:textSize="18.0sp"
                android:textColor="@color/item_selector"
                android:gravity="center_vertical"
                android:id="@+id/setting_update"
                android:background="@drawable/back_btn"
                android:paddingLeft="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:text="@string/setting_update" />
            <TextView
                android:background="#ff3d3f40"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
        </LinearLayout>
        </ScrollView>
</LinearLayout>