<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff282828"
    tools:context="baiya.flashlight.AboutActivity">
    <FrameLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:background="@drawable/bg_actionbar"
            android:layout_width="match_parent"
            android:layout_height="48.0dip">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/about_back"
                android:background="@drawable/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/ic_forward_actionbar"
                    android:layout_width="16.0dip"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_marginRight="16.0dip"
                    android:src="@drawable/ic_logo"
                    android:layout_width="32.0dip"
                    android:layout_height="32.0dip" />
            </LinearLayout>
            <TextView
                android:textSize="18.0sp"
                android:textColor="#ffffffff"
                android:text="@string/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="#ff3d3d3d"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"/>
    </FrameLayout>
    <LinearLayout
        android:layout_below="@id/title_container"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/top_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="35.0dip"
            android:src="@drawable/logo_aboutus"
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="22.0dip"
            android:textColor="#ffa9a9a9"
            android:id="@+id/app_name"
            android:background="@null"
            android:layout_marginTop="26.0dip"
            android:text="@string/app_name"
            style="@style/MySettingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="15.0dip"
            android:textColor="#ff878787"
            android:id="@+id/app_version"
            android:background="@null"
            android:layout_marginTop="15.0dip"
            android:text="@string/about_version"
            style="@style/MySettingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
